--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/react": "^19.0.11",
     "@types/react-dom": "^19.0.4",
     "axios": "^1.8.4",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
