--- a/backend/package.json
+++ b/backend/package.json
@@ -1,20 +1,39 @@
 {
   "name": "schedulr-backend",
   "version": "1.0.0",
-  "description": "Backend for Schedulr Timetable Application",
+  "description": "Backend for Schedulr timetable management app",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "init-data": "node scripts/initClassrooms.js"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   },
   "dependencies": {
-    "axios": "^1.8.4",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "mongoose": "^6.0.12"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^6.8.0",
+    "punycode": "^2.1.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "@shelf/jest-mongodb": "^4.1.7",
+    "jest": "^29.5.0",
+    "mongodb-memory-server": "^8.12.2",
+    "nodemon": "^2.0.20",
+    "supertest": "^6.3.3"
+  },
+  "jest": {
+    "preset": "@shelf/jest-mongodb",
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "/scripts/"
+    ]
   }
 }
