--- a/package.json
+++ b/package.json
@@ -7,14 +7,6 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.4.8",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.126",
-    "@types/react": "^19.0.11",
-    "@types/react-dom": "^19.0.4",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "html2canvas": "^1.4.1",
@@ -62,13 +54,20 @@
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.27.0",
     "@shelf/jest-mongodb": "^4.3.2",
-    "@testing-library/react": "^16.2.0",
     "babel-jest": "^29.7.0",
     "identity-obj-proxy": "^3.0.0",
     "jest-canvas-mock": "^2.5.2",
     "jest-environment-jsdom": "^29.7.0",
     "jest-watch-typeahead": "^2.2.2",
     "msw": "^1.3.5",
-    "ts-jest": "^29.3.1"
+    "ts-jest": "^29.3.1",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.126",
+    "@types/react": "^19.0.11",
+    "@types/react-dom": "^19.0.4"
   }
 }
